# CveTracer

./: README.md  mcp_server.py  pyproject.toml
core/: __init__.py
core/parser/: __init__.py  pom_parser.py
core/vulnerability/: __init__.py  query_api.py  unified_query.py
infrastructure/: logging_config.py  utils.py
infrastructure/nvd/: simple_api_client.py
